# bess-kge

./: .devcontainer.dockerfile  .gitignore  API_reference.html  CONTRIBUTING.md  Makefile  NOTICE.md  README.md  bess.html  besskge.html  bibliography.html  contrib.html  dev  dev_guide.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  setup.sh  user_guide.html
.gradient/: available_ipus.py  launch_vscode_server.sh
API_ref/: batch_sampler.html  bess.html  dataset.html  embedding.html  loss.html  metric.html  negative_sampler.html  scoring.html  sharding.html  utils.html
_modules/: index.html
_sources/: API_reference.rst.txt  bess.rst.txt  besskge.rst.txt  index.rst.txt  user_guide.rst.txt
api/: besskge.batch_sampler.RandomShardedBatchSampler.html  besskge.batch_sampler.RigidShardedBatchSampler.html  besskge.batch_sampler.ShardedBatchSampler.html
besskge/: __init__.py  batch_sampler.py  bess.py  dataset.py  embedding.py  loss.py  metric.py  negative_sampler.py  pipeline.py  scoring.py  sharding.py  utils.py
custom_ops/: remove_all_reduce_pattern.cpp  replicatedallgather.cpp  replicatedallgatherx.cpp  replicatedalltoall.hpp
doctrees/: besskge.doctree  environment.pickle  index.doctree  modules.doctree
html/: .buildinfo  besskge.html  genindex.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
notebooks/: 0_custom_KG_dataset.ipynb  1_biokg_training_inference.ipynb  2_yago_topk_prediction.ipynb  3_wikikg2_fp16.ipynb  (+2 more)
(+71 files in other folders)
