[options]
packages =
    besskge
    
[mypy]
pretty = true
show_error_codes = true
strict = true
check_untyped_defs = true
allow_untyped_calls = True
plugins = numpy.typing.mypy_plugin

[mypy-torch.*]
implicit_reexport = True

[mypy-poptorch.*]
ignore_missing_imports = True

[mypy-poptorch_experimental_addons.*]
ignore_missing_imports = True

[mypy-ogb.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[flake8]
# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
max-line-length = 90
extend-ignore = E203

[isort]
profile = black